--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -10,7 +10,7 @@
 
         </ul>
     </div>
-    <button onclick="Chat__loadMore();">로드</button>
+<!--    <button onclick="Chat__loadMore();">로드</button>-->
 </div>
 
 <!--fetchPost, fetchGet-->
